--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 
 body {
-    background-color: #777;
+    width: 960px;
+    margin: auto;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-size: 18px;
     line-height: 34px;
     color: #777;
-    font family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 18px;
-    width: 960px
-    margin: auto;
+    background: #777;
 }
 
-header, nav, section, aside, footer {
+header, 
+nav, 
+section, 
+aside, 
+footer {
     display: block;
     padding: 10px;
     margin: 10px;
@@ -21,7 +25,7 @@ section {
     display: block;
     float: left;
     width: 495px;
-    height: 267;
+    height: 267px;
     overflow: hidden;
 }
 
